--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 </head>
 
 <body>
- <h1>Com o COMBO+, você pode aproveitar
+   <h1>Com o COMBO+, você pode aproveitar
     a Alura+ e o Alura Língua por um
-    preço justo. </h1>
+preço justo </h1>
     
+<img src="img/Combo.png" alt="O combo+ é a junção do alura+
+e o Alura língua por um preço justo">
 </body>
 </html>
