--- a/index.html
+++ b/index.html
@@ -1,18 +1,33 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <title>Alura Plus</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="style.css">
+<title>Alura Plus</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-   <h1>Com o COMBO+, você pode aproveitar
-    a Alura+ e o Alura Língua por um
-preço justo </h1>
-    
+<section class="principal container">
+
+<div>
+
+  <h1>Com o COMBO+, você pode aproveitar 
+a Alura+ e o Alura Língua por um 
+preço justo </h1> 
+
 <img src="img/Combo.png" alt="O combo+ é a junção do alura+
 e o Alura língua por um preço justo">
+
+<a href="https://www.alura.com.br" class="container__botao">Assine já!</a>
+<a href="https://www.alura.com.br" class="container__botao botao_secundario">Assine somente o Alura+</a>
+
+<p class="container__aviso">O valor pode variar caso a assinatura seja feita 
+em outros planos
+</p>
+
+</div>
+</section>
+
 </body>
 </html>
