--- a/index.html
+++ b/index.html
@@ -5,14 +5,17 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="style.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
 <section class="principal container">
 
-<div>
+<div class="container__caixa">
 
-  <h1>Com o COMBO+, você pode aproveitar 
+  <h1 class="container__titulo">Com o COMBO+, você pode aproveitar 
 a Alura+ e o Alura Língua por um 
 preço justo </h1> 
 
@@ -26,6 +29,18 @@ e o Alura língua por um preço justo">
 em outros planos
 </p>
 
+</div>
+</section>
+
+<section class="container secundario">
+<img src="IMG/Plataformas.png" alt="um monitor e um celular com a alura aberta" class="secundario__imagem">
+<div class="container__descricao">
+<h2 class="descricao__titulo>">
+Assista do seu jeito
+</h2>
+<p class="descricao__texto">
+  Aproveite a tela grande da TV ou assista no tlabet, laptop, celular e outros aparelhos. Nossa seleção de cursos não para de crescer.
+</p>
 </div>
 </section>
 
