--- a/index.html
+++ b/index.html
@@ -116,6 +116,10 @@ container>Assine o Combo+</a>
 </li>
 
 </ul>
+<p class="rodape__texto">2024 ALURA, ALURA+ E ALURA LÍNGUA.</p>
+<p class="rodape__texto">Alura é um serviço pago, baseado em assinatura.
+ Rua Vergueiro, 2185 Bairro da Liberdade, São Paulo - SP. 
+ CNPJ 05.555.382/0001-33</p>
 </footer>
 
 </body>
