--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 a Alura+ e o Alura Língua por um 
 preço justo </h1> 
 
-<img src="img/Combo.png" alt="O combo+ é a junção do alura+
+<img src="Combo.png" alt="O combo+ é a junção do alura+
 e o Alura língua por um preço justo">
 
 <a href="https://www.alura.com.br" class="container__botao">Assine já!</a>
@@ -33,7 +33,7 @@ em outros planos
 </section>
 
 <section class="container secundario">
-<img src="IMG/Plataformas.png" alt="um monitor e um celular com a alura aberta" class="secundario__imagem">
+<img src="Plataformas.png" alt="um monitor e um celular com a alura aberta" class="secundario__imagem">
 <div class="container__descricao">
 <h2 class="descricao__titulo>">
 Assista do seu jeito
@@ -52,11 +52,11 @@ Assista do seu jeito
 <a href="https://www.alura.com.br"  class="container__botao secundario__botao" 
 container>Assine o Combo+</a>
 </div>
-<img src="img/Telas.png" alt="Tela do Alura+ e Alura Língua" class="secundario__imagem">
+<img src="Telas.png" alt="Tela do Alura+ e Alura Língua" class="secundario__imagem">
 </section>
 
 <section class="container section">
-<img src="img/Notebook.png" class="secundario__imagem">
+<img src="Notebook.png" class="secundario__imagem">
 <div class="container__descricao">
 <h2  class="descricao__titulo">Baixe seus cursos</h2>
 <p class="descricao__texto">Baixe e assista quando quiser</p>
@@ -67,24 +67,24 @@ container>Assine o Combo+</a>
 <h2 class="dispositivos__titulo">Disponível nos seus dispositivos</h2>
 <ul class="dispositivos__lista">
 <li>
-<img src="IMG/TV.png">
+<img src="TV.png">
 <h3 class="lista__item">TV</h3>
 </li>
 
 <li>
-<img src="IMG/computador.png">
+<img src="computador.png">
 <h3 class="lista__item">Computador</h3>
 </li>
 
 <li>
-  <img src="IMG/celular.png">
+  <img src="celular.png">
   <h3 class="lista__item">Celular</h3>
 </li>
 </ul>
 </section>
 
 <footer class="rodape">
-<img src="IMG/Logo.png" class="rodape__logo">
+<img src="Logo.png" class="rodape__logo">
 <ul class="rodape__lista">
 
 <li class="lista__link">
