--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ container>Assine o Combo+</a>
 </section>
 
 <footer class="rodape">
-<img src="Logo.png" class="rodape__logo">
+<img src="Logo (1).png" class="rodape__logo">
 <ul class="rodape__lista">
 
 <li class="lista__link">
