--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ container>Assine o Combo+</a>
 </section>
 
 <section class="container section">
-<img src="Notebook.png" class="secundario__imagem">
+<img src="Notebook (1).png" class="secundario__imagem">
 <div class="container__descricao">
 <h2  class="descricao__titulo">Baixe seus cursos</h2>
 <p class="descricao__texto">Baixe e assista quando quiser</p>
@@ -67,7 +67,7 @@ container>Assine o Combo+</a>
 <h2 class="dispositivos__titulo">Disponível nos seus dispositivos</h2>
 <ul class="dispositivos__lista">
 <li>
-<img src="TV.png">
+<img src="tv.png">
 <h3 class="lista__item">TV</h3>
 </li>
 
